<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GFGNewLayout</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="menu1">Verb1</string>
    <string name="menu2">Verb2</string>
    <string name="menu3">Infinitive</string>
    <string name="menu4">Gerund</string>
    <string name="menu5">Participle</string>
    <string name="menu6">Participle Construction</string>
    <string name="menu7">Passive</string>
    <string name="menu8">Subjunctive Mood</string>
    <string name="menu9">Relative</string>

</resources>
